--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
         <p class="text-xl font-medium text-[#E07B39] mb-1">Lễ Thành Hôn của</p>
         <div class="my-4">
           <p class="text-2xl md:text-3xl font-bold text-[#B45309] handwriting">Văn Đại</p>
-          <p class="text-sm text-gray-500 mb-2">(Chú rể)</p>
-          <p class="text-4xl text-[#F5A25D] my-1"><i class="fas fa-heart"></i></p>
+          <!-- <p class="text-sm text-gray-500 mb-2">(Chú rể)</p> -->
+          <p class="text-2xl text-[#F5A25D] my-1 handwriting">and</p>
           <p class="text-2xl md:text-3xl font-bold text-[#B45309] handwriting">Hồng Hạnh</p>
-          <p class="text-sm text-gray-500">(Cô dâu)</p>
+          <!-- <p class="text-sm text-gray-500">(Cô dâu)</p> -->
         </div>
       </div>
 
       <div class="text-center mb-6">
         <div class="mb-4">
           <p class="text-lg font-medium text-[#E07B39]">Thời gian:</p>
-          <p class="text-gray-700">10:30, Thứ Bảy</p>
-          <p class="text-gray-700">Ngày 03/05/2025 dương lịch (tức ngày 06/04 Ất Tỵ)</p>
+          <p class="text-gray-700">10:30, Thứ Bảy, 03.05.2025</p>
+          <p class="text-gray-700">(tức ngày 06/04 năm Ất Tỵ)</p>
         </div>
         <div>
           <p class="text-lg font-medium text-[#E07B39]">Địa điểm:</p>
@@ -98,6 +98,16 @@
         </div>
       </form>
     </div>
+
+    <div class="card p-6 mb-8">
+        <h3 class="text-lg font-semibold text-center text-[#E07B39] mb-4">Vị trí</h3>
+        <p class="text-center text-gray-700 mb-2">Địa điểm tổ chức lễ cưới</p>
+        <p class="text-center">
+          <a href="https://maps.app.goo.gl/iRAPD2rHdH5DTRB3A" target="_blank" class="text-[#B45309] underline hover:text-[#E07B39]">
+            Xem trên Google Maps
+          </a>
+        </p>
+      </div>
 
     <div class="text-center text-gray-500 text-sm">
       <p>Mong được đón tiếp bạn trong ngày trọng đại của chúng tôi!</p>
