--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p class="text-gray-700">(tức ngày 06/04 năm Ất Tỵ)</p>
         </div>
         <div>
-          <p class="text-lg font-medium text-[#E07B39]">Địa điểm:</p>
+          <p class="text-lg font-medium text-[#E07B39]">Tại: gia đình nhà trai</p>
           <p class="text-gray-700">Đội 1 - thôn Hưng Mỹ</p>
           <p class="text-gray-700">xã Trực Mỹ - huyện Trực Ninh</p>
           <p class="text-gray-700">tỉnh Nam Định</p>
